website/style.css
/* ... */
#currentDate {
  background-color: #A5B5D2;
  opacity: 0.80;
  padding: 8px 8px 6px 10px;
  border-radius: 10px;
}

.date-container {
  position: absolute;
  left: 50%;
  transform: translateX(-50%)
}

h1 {
  text-align: center;
  font-family: 'Franklin Gothic Medium', sans-serif;
}

h1 > a {
  color: #efefef;
  text-decoration: none;
}

ul {
  padding: 0;
  margin: 0;
  text-align: center;
}

li {
  color: #efefef;
  display: inline-block;
  font-family: 'Oxygen', sans-serif;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 2px;
  text-transform: uppercase;
}

li a {
  text-decoration: none;
  color: #FFF;
}

/* Articles */

.article-section {
  display: flex;
  flex-direction: column;
  background-color: #1E1E23;
  padding-top: 20px;
  padding-left: 20px;
  width: 81.5%;
}

.featured-article,
.secondary-articles {
  flex: 0 0 100%;
  color: #c6c6c6;
  padding: 20px 60px;
  background-color: #1E1E23;
  box-sizing: border-box;
  background-color: #282832; 
  border-radius: 20px;
  margin-bottom: 1.5rem;
}

.featured-article > h1,
.secondary-articles > h1 {
  text-align: left;
}

.article-link {
  color:#90a6d0
}

.article-link:hover {
  color:#A5B5D2
}

.article-link {
  display: none;
}

.article-preview {
  display: flex;
  align-items: flex-start;
  margin-bottom: 20px;
}

.article-preview img {
  width: 80px;
  height: 80px;
  object-fit: cover;
  margin-right: 10px;
}

.article-summary {
  display: none;
}

.read-more-link {
  color: #FFB061;
  cursor: pointer;
}

.read-more-link:hover {
  color: #fec78f;
}

/* Tickers */

.ticker-container {
  position: absolute;
  color: #2a2a30;
  right: 0;
  width: 30vh;
  height: 100vh;
  background-color: #c6c6c6;
  border-left: 6px solid #ddd;
  border-right: 6px solid #ddd;
  border-bottom: 6px solid #ddd;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  display: flex;
  flex-direction: column; 
  justify-content: flex-start; 
  align-items: center; 
  overflow: hidden;
}

.ticker-wrapper {
  flex: 1;
  width: 100%;
  overflow: hidden;
}

.time-display {
  background-color: #333;
  color: #fff;
  padding: 10px;
  width: 100%;
  text-align: center;
  font-weight: bold;
  margin-bottom: auto;
}

.ticker {
  animation: scroll 10s linear infinite;
  padding-top: 300%;
}

.ticker-item {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 10px;
}

.change.negative {
  color: rgb(255, 67, 67);
}

.change.positive {
  color: rgb(20, 134, 20);
}

.change-percent.negative {
  color: rgb(255, 67, 67);
}

.change-percent.positive {
  color: rgb(20, 134, 20);
}

@keyframes scroll {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-100%);
  }
}

/* Search bar */ 

.topnav .search-container {
  position: relative;
  width: 40vh;
  height: 4.5vh;
  bottom: 1px;
  display: flex;
}

.topnav input[type="text"] {
  font-size: 14px;
  background-color: #f0f0f0;
  border-radius: 14px;
  float: left; 
  display: block;
  text-align: left;
  width: 100%;
  margin: 0;
  padding: 16px;
  border: none;
}

.topnav .search-container button {
  position: absolute;
  right: 0; 
  float: none;
  height: 112%;
  width: 20%;
  border-radius: 14px;
  background: #A5B5D2;
  font-size: 14px;
  border: none;
  cursor: pointer;
  transition: 0.3s;
}

.topnav .search-container button:hover {
  background: #8B9DC4;
}

.topnav input[type=text] {
  float: none;
  display: block;
  text-align: left;
  width: 100%;
  margin: 0;
  padding: 2.5vh;
}

/* End of search bar */

/* CSS for profile.html and signup.html */

header {
  text-align: center;
  margin-bottom: 30px;
}

.navigation_profile {
  box-sizing: border-box;
  background-color: #BFCDE0;
  overflow: auto;
  padding: 18px 50px;
  position: relative;
  top: 0;
  width: 100%;
  height: 10vh;
  z-index: 999;
  display: flex;
  justify-content: space-between;
  margin: 0;
  align-items: center;
}

.navigation_profile > li {
    float: right;
  }

.card {
  overflow: hidden;
  position: relative;
  z-index: 3;
  width: 25%; 
  align-items: center;
  margin: 0 auto;
  padding: 170px 30px;
  padding-bottom: 3vh;
  border-radius: 24px;
  text-align: center;
  box-shadow: 0 100px 100px
  rgba(255, 255, 255, 0.1);
  background-color: #ffffff
}

.card::before {
  content: "";
  position: absolute;
  top: -880px;
  left: 50%;
  translate: -50% 0;
  width: 1000px;
  height: 1000px;
  border-radius: 50%;
  background-color: #A5B5D2;
}

.card_signup {
  overflow: hidden;
  position: relative;
  z-index: 3;
  width: 25%; 
  align-items: center;
  margin: 0 auto;
  padding: 170px 30px;
  padding-bottom: 10vh;
  border-radius: 24px;
  text-align: center;
  box-shadow: 0 100px 100px
  rgba(255, 255, 255, 0.1);
  background-color: #ffffff
}

.card_signup::before {
  content: "";
  position: absolute;
  top: -880px;
  left: 50%;
  translate: -50% 0;
  width: 1000px;
  height: 1000px;
  border-radius: 50%;
  background-color: #A5B5D2;
}

.card_signup .logo {
  position: absolute; 
  top: 25px;
  left: 50%;
  translate: -50% 0;
  width: 84px;
  height: 84px;
}


.card_signup > h2 {
  font-size: 22px;
  font-weight: 400;
  margin: 0 0 3vh;
  color: rgb(0 0 0 / 48%)
}

.name-fields {
  display: flex;
  gap: 10px;
}

.input-container {
  flex: 1;
  position: relative;
}

.card_signup .form_signup input[type="text"] {
  padding-left: 24px;;
  width: 100%;
  box-sizing: border-box;
  background-color: #ededed;
  border-width: 0px;
  /* Add any other desired styles for input fields */
}

.card_signup .form_signup input[type="text"]::placeholder {
  color: rgb(0 0 0 / 28%)

}

.card_signup .form_signup label {
  display: block;
  text-align: left;
  margin-bottom: 5px;
  color: rgba(0, 0, 0, 0.6);
}

.card_signup .signup_footer {
  color: #a1a1a1;
}

.card_signup .signup_footer > a {
  color: #FFB061;
}

.form_signup {
  margin: 0 auto;
  padding-bottom: 2vh;
  display: grid;
  gap: 12px;
}
/* ... */

